  PropertyImpl.DateColumnValueConverter bug fixed, did not handle null values correctly
  Values.value() added along with Values.ValueImpl
  ValuesTest added
  UiValuesTest added, common.ui.valuemap tests ignored
  common.ui.valuemap tests removed
  UiValues.TextUiValue field textComponent replaced with document
  UiValues.TextUiValue.getText() synchronizes on document
  EntityLookupField, searchHint is enabled after the field has been linked with the model, since that removed the search hint text
  TextFieldHint.updateState() privatized, only used due to the above
  ForeignKeySearchPanel.initializeForeignKeyField() removed lookup field initialization code
  ForeignKeySearchPanel.initializeInputField() now returns null for lower bound fields
  PropertyImpl.getTypeClass() now returns byte[].class for BLOB properties
  EntityConnectionImpl.setForeignKeyValues() now calls setValue() with validateType parameter as false
  EntityImpl, PropertyImpl, some minor optimizations, using package protected fields
  ItemComboBoxModel, minor generification
  Util, removed a couple of unused methods, parseInt/Double/Long() refactored
  UiUtil.selectFile()/selectDirectory() refactored
  UiUtil.removeTransferFocusOnEnter() added, used in Chinook demo
  EntityConnection, RemoteEntityConnection, some minor javadoc improvements
  UiValues.SelectedItemUIValue no longer listens to editor document, test fixed
  UiUtil.comboBoxImmediateUpdate() added as a replacement for the above
  MaximumMatch null handling improved
  EntityEditModel.createPropertyComboBoxModel() and initializePropertyComboBoxModel(), refreshEvent and nullValueString parameters removed
  EntityEditPanel and EntityUiUtil, changed according to the above
  DefaultEntityTableModel.initializeColumnModel() now throws exception if no visible properties are defined
  EntityEditModel.initializeEntityComboBoxModel(), initializeEntityLookupModel() and initializePropertyComboBoxModel() removed